fix spacing

--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -76,6 +76,13 @@ h1 span {
 
 /* FIRST SECTION */
 
+body {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+}
+
 header {
     display: flex;
     justify-content: space-between;
@@ -95,6 +102,7 @@ span.underline {
     flex-direction: column;
     text-align: center;
     position: relative;
+    
 }
 
 .intro__section {
@@ -213,5 +221,133 @@ p.explanation {
     gap: 26px;
 }
 
+/* TABLET */
+
+@media (min-width: 767px) {
+
+    /* INTRO  SECTION */
+    .bg__pattern1,
+    .bg__pattern2,
+    .bg__pattern3 {
+        display: block;
+        position: absolute;
+    }
+
+    .bg__pattern1 {
+        left: -14rem;
+        transform: translate(0, 20%);
+    }
+
+    .bg__pattern2 {
+        right: -6rem;
+        bottom: 3rem;
+    }
+
+    .intro__section h1 {
+        max-width: 50%;
+    }
+
+    .hero {
+        width: 514px;
+        height: 296px;
+    }
+
+    .intro__section {
+        padding-bottom: 220px;
+    }
+
+   
+
+    /* HIGHLIGHTS */
+
+    .col-lg {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 2rem;
+        max-width: 80%;
+    }
+
+    .text__container {
+        text-align: left;
+    }
+
+    div.row {
+        justify-content: center;
+    }
+
+    /* FOUNDER */
+
+    .founder__info {
+        width: 70%;
+        transform: translate(15%, 0);
+        text-align: left;
+    }
+
+    .founder__headshot {
+        transform: translate(-75%, 0);
+    }
+
+    .bg__pattern3 {
+        bottom: 0;
+        transform: translate(0, 50%);
+        right: 2rem;
+    }
+}
+
+@media (min-width: 1000px) {
+    header {
+        padding-left: 165px;
+        padding-right: 165px;
+    }
+
+    .intro__section {
+        padding-bottom: 326px;
+    }
+
+    .intro__section h1 {
+        max-width: 20%;
+    }
+
+    .bg__pattern1 {
+        left: -9rem;
+    }
+
+    .bg__pattern2 {
+        right: -4rem;
+        bottom: 8rem;
+    }
+
+    .hero {
+        width: 767px;
+        height: 441px;
+    }
+
+    .highlights {
+        padding-top: 255px;
+        padding-bottom: 171px;
+    }
+
+    .col-lg {
+        display: block;
+        text-align: center;
+    }
+
+    .text__container {
+        text-align: center;
+    }
+
+    .founder__headshot {
+        height: 477px;
+        width: 477px;
+        transform: translate(-95%, 0);
+    }
+
+    .founder__info {
+        width: 50%;
+        transform: translate(15%, 0);
+        text-align: left;
+    }
+}
 
 
